ipc/ipdl/test/ipdl/ok/PmanageSelf_Toplevel.ipdl
include protocol PmanageSelf;

protocol PmanageSelf_Toplevel {
    manages PmanageSelf;

child:
    async PmanageSelf();
    async __delete__();
};
